--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,7 @@
 // fonts
-$font-main: 'Roboto', sans-serif;
+$font-main: "Roboto", sans-serif;
+$font-title: "Roboto Slab", serif;
 
 // colors
-$color-bg: #f3f4f5;
-$color-secondary: #999;
+$button-color: #f26002;
+$letter-color: #ffffff;
