add clases hero

--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -1,1 +1,5 @@
-Foto Anonymous proxy In hac habitasse platea dictumst. Flecha
+<section class="hero">
+    <h1 class="hero__title">Anonymous proxy</h1>
+    <p class="hero__paragraph">In hac habitasse platea dictumst.</p>
+    <div class="hero__image"><img class="hero__image--arrow" src="./assets/images/ico-scroll-down.svg" alt=""></img></div>
+</section>
