deleted class img

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
   <a href="https://adalab.es/" title="Home-Adalab" target="_blank">
-    <img src="./assets/images/ico-menu.svg" alt="menu" class="header__image"
+    <img src="./assets/images/ico-menu.svg" alt="menu"
   /></a>
 </header>
