add flex header

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,10 +4,7 @@
   height: 44px;
   width: 44px;
   line-height: 44px;
-  &__image {
-    margin-left: 13px;
-    // Se sube para arriba, preguntad o revisar
-    // display: block;
-    // margin: auto;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
