--- a/src/html/partials/section1.html
+++ b/src/html/partials/section1.html
@@ -1,3 +1,11 @@
-Insomnia tips Looking throygh a window Donec accusmsan, nulla ut volutpat
-porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper
-soldales rutrum. Boton Go
+<section class="section1">
+  <small class="section1__small">Insomnia tips</small>
+  <article class="section1__article">
+    <h2 class="section1__article--title">Looking through a window</h2>
+    <p class="section1__article--paragraph">
+      Donec accusmsan, nulla ut volutpat porttitor, quam odio tempus felis, at
+      luctus ex diam nec lectus. Vivamus semper soldales rutrum.
+    </p>
+    <div class="section1__article--button">Boton Go</div>
+  </article>
+</section>
