--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
 @import "core/variables";
 @import "core/reset";
-@import "components/code";
 @import "components/links";
+@import "pages/index";
 @import "layout/header";
 @import "layout/hero";
 @import "layout/section1";
