--- a/src/html/partials/section1.html
+++ b/src/html/partials/section1.html
@@ -1,11 +1,10 @@
-<section class="section1">
-  <small class="section1__small">Insomnia tips</small>
-  <article class="section1__article">
-    <h2 class="section1__article--title">Looking through a window</h2>
-    <p class="section1__article--paragraph">
-      Donec accusmsan, nulla ut volutpat porttitor, quam odio tempus felis, at
-      luctus ex diam nec lectus. Vivamus semper soldales rutrum.
-    </p>
-    <div class="section1__article--button">Boton Go</div>
-  </article>
-</section>
+<article class="article margin-page">
+  <small class="article__small">Insomnia tips</small>
+
+  <h2 class="article__title">Looking through a window</h2>
+  <p class="article__paragraph">
+    Donec accusmsan, nulla ut volutpat porttitor, quam odio tempus felis, at
+    luctus ex diam nec lectus. Vivamus semper soldales rutrum.
+  </p>
+  <div class="article__button">Go</div>
+</article>
