--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -6,7 +6,7 @@
   background-image: url(../images/cover.jpg);
   background-size: cover;
   background-position: center;
-  height: 568px;
+  height: 100vh;
   width: 100%;
   &__title {
     font-size: 42px;
@@ -15,7 +15,8 @@
     text-transform: uppercase;
     text-align: center;
     margin: 10px;
-    margin-top: 100px;
+    // para colocarlo en su sitio
+    margin-top: 110px;
   }
   &__paragraph {
     font-size: 16px;
@@ -27,8 +28,10 @@
     width: 45px;
     height: 45px;
     border-radius: 50%;
+    // para colocarlo abajo
     position: relative;
-    top: 110px;
+    top: 130px;
+    // para centrar la flecha
     display: flex;
     justify-content: center;
     align-items: center;
