add footer classes

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,2 +1,54 @@
-Boton flecha Articles Books Events Reasons Tips Twitter Instagram
-Mastodon.social &copy;2021 we (emoticono corazon) components
+<footer class="footer .margin-page">
+  <div class="footer__image">
+    <a href=""><img src="./assets/images/ico-arrow.svg" alt="" /></a>
+  </div>
+  <ul class="footer__list">
+    <li class="footer__list--link">
+      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+        >Articles</a
+      >
+    </li>
+    <li class="footer__list--link">
+      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+        >Books</a
+      >
+    </li>
+    <li class="footer__list--link">
+      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+        >Events</a
+      >
+    </li>
+    <li class="footer__list--link">
+      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+        >Reasons</a
+      >
+    </li>
+    <li class="footer__list--link">
+      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+        >Tips</a
+      >
+    </li>
+  </ul>
+
+  <ul class="footer__list">
+    <li class="footer__list--link">
+      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+        >Twitter</a
+      >
+    </li>
+    <li class="footer__list--link">
+      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+        >Instagram</a
+      >
+    </li>
+    <li class="footer__list--link">
+      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+        >Mastodon.social</a
+      >
+    </li>
+  </ul>
+  <div class="footer__paragraph">
+    <p>&copy;2021</p>
+    <p >we &#129505 components</p>
+  </div>
+</footer>
