--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,3 +1,11 @@
 .margin-page {
   margin: 0 15px;
 }
+@mixin images {
+  height: 45px;
+  width: 45px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
