--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,30 +1,30 @@
 <footer class="footer .margin-page">
   <div class="footer__image">
-    <a href=""><img src="./assets/images/ico-arrow.svg" alt="" /></a>
+    <a href="#hero" title="Ir al principio"><img src="./assets/images/ico-arrow.svg" alt="arrow-up" /></a>
   </div>
   <ul class="footer__list">
     <li class="footer__list--link">
-      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
         >Articles</a
       >
     </li>
     <li class="footer__list--link">
-      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
         >Books</a
       >
     </li>
     <li class="footer__list--link">
-      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
         >Events</a
       >
     </li>
     <li class="footer__list--link">
-      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
         >Reasons</a
       >
     </li>
     <li class="footer__list--link">
-      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
         >Tips</a
       >
     </li>
@@ -32,17 +32,17 @@
 
   <ul class="footer__list">
     <li class="footer__list--link">
-      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
         >Twitter</a
       >
     </li>
     <li class="footer__list--link">
-      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
         >Instagram</a
       >
     </li>
     <li class="footer__list--link">
-      <a class="footer__list--link" href="https://adalab.es/" target="_blank"
+      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
         >Mastodon.social</a
       >
     </li>
