add link to section-2

--- a/src/html/partials/hero.html
+++ b/src/html/partials/hero.html
@@ -1,5 +1,5 @@
-<section class="hero">
+<section id="hero" class="hero">
     <h1 class="hero__title">Anonymous proxy</h1>
     <p class="hero__paragraph">In hac habitasse platea dictumst.</p>
-    <div class="hero__image"><img src="./assets/images/ico-scroll-down.svg" alt=""></img></div>
+    <div class="hero__image"><a href="#section-2" title="Ir a sección" ><img src="./assets/images/ico-scroll-down.svg" alt=""></a></img></div>
 </section>
