--- a/src/html/partials/section-2.html
+++ b/src/html/partials/section-2.html
@@ -1,4 +1,4 @@
-<section class="section-2">
+<section id="section-2" class="section-2">
   <h2 class="section-2__title">3 reasons to purchase</h2>
   <article class="section-2__article">
     <h3 class="section-2__article--title">Ut sed metus</h3>
