--- a/src/scss/core/_reset.scss
+++ b/src/scss/core/_reset.scss
@@ -92,6 +92,9 @@ video {
   vertical-align: baseline;
   box-sizing: border-box;
 }
+small {
+  font-size: 14px;
+}
 
 /* HTML5 display-role reset for older browsers */
 article,
