--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -7,26 +7,40 @@
   background-size: cover;
   background-position: center;
   height: 100vh;
+
   &__title {
     font-size: 42px;
     font-family: $font-title;
     color: $letter-color;
     text-transform: uppercase;
     text-align: center;
-    margin: 10px;
+    word-spacing: 100vw;
+    padding: 10px;
     // para colocarlo en su sitio
-    margin-top: 110px;
+    margin-top: 200px;
+
+    @media all and (min-width: 768px) {
+      font-size: 80px;
+      margin-top: 380px;
+    }
   }
   &__paragraph {
     font-size: 16px;
     font-family: $font-main;
     color: $letter-color;
+    margin: 20px;
+    @media all and (min-width: 768px) {
+      font-size: 24px;
+    }
   }
   &__image {
     background-color: $letter-color;
     @include images;
     // para colocarlo abajo
     position: relative;
-    top: 130px;
+    top: 75px;
+    @media all and (min-width: 768px) {
+      top: 25px;
+    }
   }
 }
