--- a/src/scss/layout/_section-1.scss
+++ b/src/scss/layout/_section-1.scss
@@ -15,11 +15,18 @@
     font-family: $font-title;
     text-transform: capitalize;
     margin-bottom: 15px;
+    @media all and (min-width: 768px) {
+      font-size: 26px;
+      margin-bottom: 30px;
+    }
   }
   &__paragraph {
     font-size: 18px;
     color: #4a4a4a;
     margin-bottom: 30px;
+    @media all and (min-width: 768px) {
+      font-size: 20px;
+    }
   }
   &__button {
     border: solid 3px $button-color;
