--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,6 +1,8 @@
-<footer class="footer .margin-page">
-  <div class="footer__image">
-    <a href="#hero" title="Ir al principio"><img src="./assets/images/ico-arrow.svg" alt="arrow-up" /></a>
+<footer class="footer">
+  <div class="footer__container">
+    <div class="footer__container--image">
+      <a href="#hero" title="Ir al principio"><img src="./assets/images/ico-arrow.svg" alt="arrow-up" /></a>
+    </div>
   </div>
   <ul class="footer__list">
     <li class="footer__list--link">
