--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -6,25 +6,54 @@
   font-family: $font-main;
   color: $letter-color;
   background-color: #304268;
-  &__image {
-    background-color: $letter-color;
-    @include images;
-    position: relative;
-    bottom: 25px;
-    &:hover {
-      animation: rotate 3s;
+  @media all and (min-width: 768px) {
+    flex-direction: row;
+    justify-content: space-between;
+    // Si pongo padding en el footer, el rectangulo de la flecha se va a la derecha (en tablet)
+    padding: 45px 39px;
+  }
+  @media all and (min-width: 1200px) {
+    justify-content: space-evenly;
+  }
+  &__container {
+    width: 100%;
+    position: absolute;
+    transform: translateY(-190px);
+    border: 5px solid red;
+    @media all and (min-width: 768px) {
+      transform: translateY(-125px);
+    }
+    &--image {
+      background-color: $letter-color;
+      @include images;
+      margin: auto;
+      &:hover {
+        animation: rotate 3s;
+      }
     }
   }
+
   &__list {
     margin: 15px;
     text-align: center;
     &--link {
       padding: 5px;
     }
+    @media all and (min-width: 768px) {
+      order: 2;
+      // padding: 45px 39px;
+    }
+    @media all and (min-width: 1200px) {
+      text-align: start;
+    }
   }
   &__paragraph {
     margin-bottom: 45px;
     text-align: center;
     line-height: 1.5;
+  }
+  @media all and (min-width: 768px) {
+    order: 1;
+    // padding: 45px 39px;
   }
 }
