--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,5 +1,11 @@
 .margin-page {
   margin: 0 15px;
+  @media all and (min-width: 768px) {
+    margin: 0 39px;
+  }
+  @media all and (min-width: 1200px) {
+    margin: 0 275px;
+  }
 }
 @mixin images {
   height: 45px;
