--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -5,24 +5,25 @@
   align-items: center;
   font-family: $font-main;
   color: $letter-color;
+  font-size: 16px;
   background-color: #304268;
   @media all and (min-width: 768px) {
     flex-direction: row;
-    justify-content: space-between;
-    // Si pongo padding en el footer, el rectangulo de la flecha se va a la derecha (en tablet)
-    padding: 45px 39px;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    padding: 45px 0px;
   }
   @media all and (min-width: 1200px) {
-    justify-content: space-evenly;
+    justify-content: center;
   }
   &__container {
     width: 100%;
     position: absolute;
     transform: translateY(-190px);
-    border: 5px solid red;
     @media all and (min-width: 768px) {
-      transform: translateY(-125px);
+      transform: translateY(-70px);
     }
+
     &--image {
       background-color: $letter-color;
       @include images;
@@ -41,19 +42,19 @@
     }
     @media all and (min-width: 768px) {
       order: 2;
-      // padding: 45px 39px;
-    }
-    @media all and (min-width: 1200px) {
       text-align: start;
+      margin: 0 15px;
+      // padding: 45px 39px;
     }
   }
   &__paragraph {
     margin-bottom: 45px;
     text-align: center;
     line-height: 1.5;
-  }
-  @media all and (min-width: 768px) {
-    order: 1;
-    // padding: 45px 39px;
+    font-size: 14px;
+    @media all and (min-width: 768px) {
+      text-align: start;
+      // padding: 45px 39px;
+    }
   }
 }
