change small for h2

--- a/src/html/partials/section-1.html
+++ b/src/html/partials/section-1.html
@@ -1,8 +1,8 @@
 <section>
   <article class="article margin-page">
-    <small class="article__small">Insomnia tips</small>
+    <h2 class="article__title">Insomnia tips</h2>
 
-    <h2 class="article__title">Looking through a window</h2>
+    <h3 class="article__subtitle">Looking through a window</h3>
     <p class="article__paragraph">
       Donec accusmsan, nulla ut volutpat porttitor, quam odio tempus felis, at
       luctus ex diam nec lectus. Vivamus semper soldales rutrum.
