--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -33,7 +33,6 @@
       }
     }
   }
-
   &__list {
     margin: 15px;
     text-align: center;
@@ -56,5 +55,15 @@
       text-align: start;
       // padding: 45px 39px;
     }
+  }
+}
+// Animacion
+@keyframes rotate {
+  from {
+    transform: rotateZ(0);
+  }
+  to {
+    transform: rotateZ(360deg);
+    background-color: #304268;
   }
 }
