--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -7,7 +7,8 @@ $button-color: #f26002;
 $letter-color: #ffffff;
 
 //arrows
-@mixin images {
+@mixin icon {
+  background-color: $letter-color;
   height: 45px;
   width: 45px;
   border-radius: 50%;
