--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -25,8 +25,7 @@
     }
 
     &--image {
-      background-color: $letter-color;
-      @include images;
+      @include icon;
       margin: auto;
       &:hover {
         animation: rotate 3s;
