--- a/src/scss/layout/_section-1.scss
+++ b/src/scss/layout/_section-1.scss
@@ -24,7 +24,7 @@
     font-family: $font-title;
     text-transform: capitalize;
     margin-bottom: 15px;
-    padding: 5px 0px;
+    padding-top: 5px;
     @media all and (min-width: 768px) {
       font-size: 26px;
       margin-bottom: 30px;
@@ -37,6 +37,7 @@
     font-size: 18px;
     color: #4a4a4a;
     margin-bottom: 30px;
+    line-height: 1.5;
     @media all and (min-width: 768px) {
       font-size: 20px;
     }
