add mediaq desktop

--- a/src/scss/layout/_section-2.scss
+++ b/src/scss/layout/_section-2.scss
@@ -4,9 +4,9 @@
   row-gap: 45px;
   background-color: #eff9ff;
   text-align: center;
+
   @media all and (min-width: 768px) {
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
   }
   &__title {
     font-size: 24px;
@@ -14,18 +14,28 @@
     margin-top: 30px;
     @media all and (min-width: 768px) {
       grid-column: span 3;
+      font-size: 26px;
+      @media all and (min-width: 1200px) {
+        font-size: 32px;
+      }
     }
   }
   &__article {
     font-family: $font-main;
     font-size: 18px;
+    line-height: 1.5;
     &--title {
       font-family: $font-title;
-      line-height: 1.5;
+      @media all and (min-width: 768px) {
+        font-size: 24px;
+      }
     }
     &--paragraph {
-      margin: 0 70px;
-      line-height: 1.5;
+      padding: 0 70px;
+      @media all and (min-width: 768px) {
+        font-size: 20px;
+        padding: 0 20px;
+      }
     }
   }
   &__button {
@@ -33,13 +43,14 @@
     margin: auto;
     font-family: $font-main;
     font-size: 20px;
+    font-weight: 500;
     color: $letter-color;
     background-color: $button-color;
     width: 184px;
     height: 45px;
     line-height: 45px;
     border-radius: 25px;
-    margin-bottom: 45px;
+    margin-bottom: 60px;
     transition: color 2s ease-in, background-color 2s ease-in, border 1s ease-in;
     &:hover {
       background-color: $letter-color;
@@ -48,6 +59,10 @@
     }
     @media all and (min-width: 768px) {
       grid-column: span 3;
+      width: 210px;
+    }
+    @media all and (min-width: 1200px) {
+      width: 255px;
     }
   }
 }
