--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -7,11 +7,11 @@
   color: $letter-color;
   font-size: 16px;
   background-color: #304268;
+  padding: 45px 0px;
   @media all and (min-width: 768px) {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: flex-start;
-    padding: 45px 0px;
   }
   @media all and (min-width: 1200px) {
     justify-content: center;
@@ -19,7 +19,7 @@
   &__container {
     width: 100%;
     position: absolute;
-    transform: translateY(-190px);
+    transform: translateY(-213px);
     @media all and (min-width: 768px) {
       transform: translateY(-70px);
     }
@@ -36,23 +36,26 @@
     margin: 15px;
     text-align: center;
     &--link {
-      padding: 5px;
+      padding: 6px 0px;
     }
     @media all and (min-width: 768px) {
       order: 2;
       text-align: start;
       margin: 0 15px;
-      // padding: 45px 39px;
+    }
+    @media all and (min-width: 1200px) {
+      margin: 0 40px;
     }
   }
   &__paragraph {
-    margin-bottom: 45px;
     text-align: center;
-    line-height: 1.5;
+    line-height: 1.8;
     font-size: 14px;
     @media all and (min-width: 768px) {
-      text-align: start;
-      // padding: 45px 39px;
+      text-align: left;
+    }
+    @media all and (min-width: 1200px) {
+      margin: 0 40px;
     }
   }
 }
