--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -1,13 +1,12 @@
 .hero {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   background-image: url(../images/cover.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
-
   &__title {
     font-size: 42px;
     font-family: $font-title;
@@ -16,15 +15,11 @@
     text-align: center;
     line-height: 1.2;
     word-spacing: 100vw;
-    // para colocarlo en su sitio
-    margin-top: 250px;
-
     @media all and (min-width: 768px) {
-      margin-top: 450px;
       font-size: 80px;
+      margin: 0;
     }
     @media all and (min-width: 1200px) {
-      margin-top: 550px;
       font-size: 100px;
     }
   }
@@ -32,24 +27,23 @@
     font-size: 16px;
     font-family: $font-main;
     color: $letter-color;
-    margin-top: 20px;
+    margin-top: 10px;
     @media all and (min-width: 768px) {
       font-size: 24px;
+      margin-top: 20px;
     }
     @media all and (min-width: 1200px) {
-      margin: 0;
+      margin-top: 0;
     }
   }
   &__image {
     @include icon;
-    // para colocarlo abajo
-    position: relative;
-    top: 60px;
+    margin: 100px 0 53px;
     @media all and (min-width: 768px) {
-      top: 45px;
+      margin: 50px 0 53px;
     }
     @media all and (min-width: 1200px) {
-      top: 20px;
+      margin: 30px 0 15px;
     }
   }
 }
