--- a/src/scss/layout/_section-2.scss
+++ b/src/scss/layout/_section-2.scss
@@ -7,6 +7,10 @@
 
   @media all and (min-width: 768px) {
     grid-template-columns: repeat(3, 1fr);
+    padding: 0 40px;
+  }
+  @media all and (min-width: 1200px) {
+    padding: 0 85px;
   }
   &__title {
     font-size: 24px;
@@ -31,10 +35,8 @@
       }
     }
     &--paragraph {
-      padding: 0 70px;
       @media all and (min-width: 768px) {
         font-size: 20px;
-        padding: 0 20px;
       }
     }
   }
