--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -7,46 +7,38 @@
   <ul class="footer__list">
     <li class="footer__list--link">
       <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
-        >Articles</a
-      >
+        >Articles</a>
     </li>
     <li class="footer__list--link">
       <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
-        >Books</a
-      >
+        >Books</a>
     </li>
     <li class="footer__list--link">
       <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
-        >Events</a
-      >
+        >Events</a>
     </li>
     <li class="footer__list--link">
       <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
-        >Reasons</a
-      >
+        >Reasons</a>
     </li>
     <li class="footer__list--link">
       <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
-        >Tips</a
-      >
+        >Tips</a>
     </li>
   </ul>
 
   <ul class="footer__list">
     <li class="footer__list--link">
       <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
-        >Twitter</a
-      >
+        >Twitter</a>
     </li>
     <li class="footer__list--link">
       <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
-        >Instagram</a
-      >
+        >Instagram</a>
     </li>
     <li class="footer__list--link">
       <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
-        >Mastodon.social</a
-      >
+        >Mastodon.social</a>
     </li>
   </ul>
   <div class="footer__paragraph">
