--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -23,7 +23,6 @@
     @media all and (min-width: 768px) {
       transform: translateY(-70px);
     }
-
     &--image {
       @include icon;
       margin: auto;
@@ -59,7 +58,7 @@
     }
   }
 }
-// Animacion
+// Animation
 @keyframes rotate {
   from {
     transform: rotateZ(0);
