add icon fontawesome

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,32 +1,54 @@
 <footer class="footer">
   <div class="footer__container">
     <div class="footer__container--image">
-      <a href="#hero" title="Ir al principio"><img src="./assets/images/ico-arrow.svg" alt="arrow-up" /></a>
+      <a href="#hero" title="Ir al principio"
+        ><img src="./assets/images/ico-arrow.svg" alt="arrow-up"
+      /></a>
     </div>
   </div>
   <ul class="footer__list">
     <li class="footer__list--link">
-      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
+      <a
+        class="footer__list--link"
+        title="Ir a Adalab"
+        href="https://adalab.es/"
+        target="_blank"
         >Articles</a
       >
     </li>
     <li class="footer__list--link">
-      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
+      <a
+        class="footer__list--link"
+        title="Ir a Adalab"
+        href="https://adalab.es/"
+        target="_blank"
         >Books</a
       >
     </li>
     <li class="footer__list--link">
-      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
+      <a
+        class="footer__list--link"
+        title="Ir a Adalab"
+        href="https://adalab.es/"
+        target="_blank"
         >Events</a
       >
     </li>
     <li class="footer__list--link">
-      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
+      <a
+        class="footer__list--link"
+        title="Ir a Adalab"
+        href="https://adalab.es/"
+        target="_blank"
         >Reasons</a
       >
     </li>
     <li class="footer__list--link">
-      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
+      <a
+        class="footer__list--link"
+        title="Ir a Adalab"
+        href="https://adalab.es/"
+        target="_blank"
         >Tips</a
       >
     </li>
@@ -34,23 +56,35 @@
 
   <ul class="footer__list">
     <li class="footer__list--link">
-      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
+      <a
+        class="footer__list--link"
+        title="Ir a Adalab"
+        href="https://adalab.es/"
+        target="_blank"
         >Twitter</a
       >
     </li>
     <li class="footer__list--link">
-      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
+      <a
+        class="footer__list--link"
+        title="Ir a Adalab"
+        href="https://adalab.es/"
+        target="_blank"
         >Instagram</a
       >
     </li>
     <li class="footer__list--link">
-      <a class="footer__list--link" title="Ir a Adalab" href="https://adalab.es/" target="_blank"
+      <a
+        class="footer__list--link"
+        title="Ir a Adalab"
+        href="https://adalab.es/"
+        target="_blank"
         >Mastodon.social</a
       >
     </li>
   </ul>
   <div class="footer__paragraph">
     <p>&copy;2021</p>
-    <p >we &#129505 components</p>
+    <p>we <i class="fas fa-heart"></i> components</p>
   </div>
 </footer>
