--- a/src/scss/layout/_section-1.scss
+++ b/src/scss/layout/_section-1.scss
@@ -15,6 +15,7 @@
     color: #8ccbea;
     font-size: 14px;
     padding: 5px 0px;
+    text-transform: capitalize;
     @media all and (min-width: 1200px) {
       font-size: 16px;
     }
