--- a/src/scss/layout/_section-2.scss
+++ b/src/scss/layout/_section-2.scss
@@ -16,6 +16,7 @@
     font-size: 24px;
     font-family: $font-title;
     margin-top: 30px;
+    text-transform: capitalize;
     @media all and (min-width: 768px) {
       grid-column: span 3;
       font-size: 26px;
