--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,5 +1,28 @@
-<header class="header">
+<!-- <header class="header">
   <a href="https://adalab.es/" title="Home-Adalab" target="_blank">
     <img src="./assets/images/ico-menu.svg" alt="menu"
   /></a>
+</header> -->
+<header>
+  <nav>
+    <input type="checkbox" id="menu" class="menu" />
+    <label for="menu" class="menu__content">
+      <img src="./assets/images/ico-menu.svg" alt="menu" />
+    </label>
+    <ul class="menu__list">
+      <li class="menu__list--link">
+        <a href="https://adalab.es/" title="Home-Adalab" target="_blank"
+          ><i class="fas fa-home"></i
+        ></a>
+      </li>
+      <li class="menu__list--link">
+        <a href="https://www.instagram.com/adalab_digital" title="Instagram Adalab" target="_blank"
+          ><i class="fab fa-instagram"></i></i
+        ></a>
+      </li>
+      <li class="menu__list--link">
+        <a href="https://twitter.com/Adalab_Digital" target="_blank" title="Twitter Adalab"><i class="fab fa-twitter"></i></i></a>
+      </li>
+    </ul>
+  </nav>
 </header>
