--- a/src/html/partials/section-1.html
+++ b/src/html/partials/section-1.html
@@ -1,5 +1,5 @@
 <section>
-  <article class="article margin-page">
+  <article class="article">
     <h2 class="article__title">Insomnia tips</h2>
     <h3 class="article__subtitle">Looking through a window</h3>
     <p class="article__paragraph">
