--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,4 +5,5 @@
 @import "layout/hero";
 @import "layout/section-1";
 @import "layout/section-2";
+@import "layout/special-offer";
 @import "layout/footer";
