to correct issues

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -6,83 +6,87 @@
       /></a>
     </div>
   </div>
-  <ul class="footer__list">
-    <li class="footer__list--link">
-      <a
-        class="footer__list--link"
-        title="Ir a Adalab"
-        href="https://adalab.es/"
-        target="_blank"
-        >Articles</a
-      >
-    </li>
-    <li class="footer__list--link">
-      <a
-        class="footer__list--link"
-        title="Ir a Adalab"
-        href="https://adalab.es/"
-        target="_blank"
-        >Books</a
-      >
-    </li>
-    <li class="footer__list--link">
-      <a
-        class="footer__list--link"
-        title="Ir a Adalab"
-        href="https://adalab.es/"
-        target="_blank"
-        >Events</a
-      >
-    </li>
-    <li class="footer__list--link">
-      <a
-        class="footer__list--link"
-        title="Ir a Adalab"
-        href="https://adalab.es/"
-        target="_blank"
-        >Reasons</a
-      >
-    </li>
-    <li class="footer__list--link">
-      <a
-        class="footer__list--link"
-        title="Ir a Adalab"
-        href="https://adalab.es/"
-        target="_blank"
-        >Tips</a
-      >
-    </li>
-  </ul>
+  <nav>
+    <ul class="footer__list">
+      <li class="footer__list--link">
+        <a
+          class="footer__list--link"
+          title="Ir a Adalab"
+          href="https://adalab.es/"
+          target="_blank"
+          >Articles</a
+        >
+      </li>
+      <li class="footer__list--link">
+        <a
+          class="footer__list--link"
+          title="Ir a Adalab"
+          href="https://adalab.es/"
+          target="_blank"
+          >Books</a
+        >
+      </li>
+      <li class="footer__list--link">
+        <a
+          class="footer__list--link"
+          title="Ir a Adalab"
+          href="https://adalab.es/"
+          target="_blank"
+          >Events</a
+        >
+      </li>
+      <li class="footer__list--link">
+        <a
+          class="footer__list--link"
+          title="Ir a Adalab"
+          href="https://adalab.es/"
+          target="_blank"
+          >Reasons</a
+        >
+      </li>
+      <li class="footer__list--link">
+        <a
+          class="footer__list--link"
+          title="Ir a Adalab"
+          href="https://adalab.es/"
+          target="_blank"
+          >Tips</a
+        >
+      </li>
+    </ul>
+  </nav>
 
-  <ul class="footer__list">
-    <li class="footer__list--link">
-      <a
-        class="footer__list--link"
-        title="Ir a Adalab"
-        href="https://adalab.es/"
-        target="_blank"
-        >Twitter</a
-      >
-    </li>
-    <li class="footer__list--link">
-      <a
-        class="footer__list--link"
-        title="Ir a Adalab"
-        href="https://adalab.es/"
-        target="_blank"
-        >Instagram</a
-      >
-    </li>
-    <li class="footer__list--link">
-      <a
-        class="footer__list--link"
-        title="Ir a Adalab"
-        href="https://adalab.es/"
-        target="_blank"
-        >Mastodon.social</a
-      >
-    </li>
-  </ul>
+  <nav>
+    <ul class="footer__list">
+      <li class="footer__list--link">
+        <a
+          class="footer__list--link"
+          title="Ir a Adalab"
+          href="https://adalab.es/"
+          target="_blank"
+          >Twitter</a
+        >
+      </li>
+      <li class="footer__list--link">
+        <a
+          class="footer__list--link"
+          title="Ir a Adalab"
+          href="https://adalab.es/"
+          target="_blank"
+          >Instagram</a
+        >
+      </li>
+      <li class="footer__list--link">
+        <a
+          class="footer__list--link"
+          title="Ir a Adalab"
+          href="https://adalab.es/"
+          target="_blank"
+          >Mastodon.social</a
+        >
+      </li>
+    </ul>
+  </nav>
   <div class="footer__paragraph">
     <p>&copy;2021</p>
     <p>we <i class="fas fa-heart"></i> components</p>
