--- a/src/html/partials/section-1.html
+++ b/src/html/partials/section-1.html
@@ -6,6 +6,6 @@
       Donec accusmsan, nulla ut volutpat porttitor, quam odio tempus felis, at
       luctus ex diam nec lectus. Vivamus semper soldales rutrum.
     </p>
-    <div class="article__button">Go</div>
+    <button class="article__button">Go</button>
   </article>
 </section>
