--- a/src/html/partials/section-2.html
+++ b/src/html/partials/section-2.html
@@ -18,5 +18,5 @@
       Aliquam in dolor et dolor tincidunt.
     </p>
   </article>
-  <div class="section-2__button">More reasons</div>
+  <button class="section-2__button">More reasons</button>
 </section>
