--- a/src/scss/layout/_section-2.scss
+++ b/src/scss/layout/_section-2.scss
@@ -53,6 +53,7 @@
     height: 45px;
     line-height: 45px;
     border-radius: 25px;
+    border: none;
     margin-bottom: 60px;
     transition: color 2s ease-in, background-color 2s ease-in, border 1s ease-in;
     &:hover {
